Добавляет стили для карточки подарка

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -290,37 +290,45 @@
 
         <ul class="extra__list">
           <li class="extra__item">
-            <h3 class="extra__item-title">Сахарозаменитель</h3>
-            <div class="extra__text">
-              <span class="extra__description regular-text">1 упаковка (100 г)</span>
-              <span class="extra__price regular-text">200 ₽</span>
+            <div class="extra__item-inner">
+              <h3 class="extra__item-title">Сахарозаменитель</h3>
+              <div class="extra__text">
+                <span class="extra__description regular-text">1 упаковка (100 г)</span>
+                <span class="extra__price regular-text">200 ₽</span>
+              </div>
             </div>
             <button class="extra__button button button--primary" type="button">Заказать</button>
           </li>
 
           <li class="extra__item">
-            <h3 class="extra__item-title">Питьевая вода</h3>
-            <div class="extra__text">
-              <span class="extra__description regular-text">5 литров</span>
-              <span class="extra__price regular-text">50 ₽</span>
+            <div class="extra__item-inner">
+              <h3 class="extra__item-title">Питьевая вода</h3>
+              <div class="extra__text">
+                <span class="extra__description regular-text">5 литров</span>
+                <span class="extra__price regular-text">50 ₽</span>
+              </div>
             </div>
             <button class="extra__button button button--primary" type="button">Заказать</button>
           </li>
 
           <li class="extra__item">
-            <h3 class="extra__item-title">Молоко</h3>
-            <div class="extra__text">
-              <span class="extra__description regular-text">1 литр</span>
-              <span class="extra__price regular-text">100 ₽</span>
+            <div class="extra__item-inner">
+              <h3 class="extra__item-title">Молоко</h3>
+              <div class="extra__text">
+                <span class="extra__description regular-text">1 литр</span>
+                <span class="extra__price regular-text">100 ₽</span>
+              </div>
             </div>
             <button class="extra__button button button--primary" type="button">Заказать</button>
           </li>
 
           <li class="extra__item">
-            <h3 class="extra__item-title">Витамины</h3>
-            <div class="extra__text">
-              <span class="extra__description regular-text">1 упаковка (30 г)</span>
-              <span class="extra__price regular-text">300 ₽</span>
+            <div class="extra__item-inner">
+              <h3 class="extra__item-title">Витамины</h3>
+              <div class="extra__text">
+                <span class="extra__description regular-text">1 упаковка (30 г)</span>
+                <span class="extra__price regular-text">300 ₽</span>
+              </div>
             </div>
             <button class="extra__button button button--primary" type="button">Заказать</button>
           </li>
