--- a/source/form.html
+++ b/source/form.html
@@ -15,33 +15,35 @@
 
 <body class="page__body">
   <header class="main-header container">
-    <a class="main-header__logo" href="index.html">
-      <picture>
-        <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="202" height="59">
-        <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="174" height="50">
-        <img class="main-header__logo-image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
-      </picture>
-    </a>
+    <div class="main-header__container">
+      <a class="main-header__logo" href="index.html">
+        <picture>
+          <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="202" height="59">
+          <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="174" height="50">
+          <img class="main-header__logo-image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
+        </picture>
+      </a>
 
-    <nav class="main-nav"> <!-- Класс no-js для меню в потоке -->
-      <button class="main-nav__toggle" type="button"> <!-- Когда меню открыто - класс main-nav__toggle--opened -->
-        <span class="visually-hidden">Открыть меню.</span>
-      </button>
+      <nav class="main-nav"> <!-- Класс no-js для меню в потоке -->
+        <button class="main-nav__toggle" type="button"> <!-- Когда меню открыто - класс main-nav__toggle--opened -->
+          <span class="visually-hidden">Открыть меню.</span>
+        </button>
 
-      <ul class="main-nav__list site-list"> <!-- Когда меню открыто - класс main-nav__list--opened -->
-        <li class="site-list__item">
-          <a class="site-list__link" href="index.html">Главная</a>
-        </li>
+        <ul class="main-nav__list site-list"> <!-- Когда меню открыто - класс main-nav__list--opened -->
+          <li class="site-list__item">
+            <a class="site-list__link" href="index.html">Главная</a>
+          </li>
 
-        <li class="site-list__item">
-          <a class="site-list__link" href="catalog.html">Каталог продукции</a>
-        </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+          </li>
 
-        <li class="site-list__item">
-          <a class="site-list__link site-list__link--current" href="#" aria-current="page">Подбор программы</a>
-        </li>
-      </ul>
-    </nav>
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--current" href="#" aria-current="page">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="main main-form container">
