--- a/source/index.html
+++ b/source/index.html
@@ -14,34 +14,36 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header container">
-    <a class="main-header__logo" href="#" aria-current="page">
-      <picture>
-        <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="202" height="59">
-        <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="174" height="50">
-        <img class="main-header__logo-image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
-      </picture>
-    </a>
+  <header class="main-header main-header--green container">
+    <div class="main-header__container">
+      <a class="main-header__logo" href="#" aria-current="page">
+        <picture>
+          <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="202" height="59">
+          <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="174" height="50">
+          <img class="main-header__logo-image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
+        </picture>
+      </a>
 
-    <nav class="main-nav"> <!-- Класс main-nav--no-js для меню в потоке -->
-      <button class="main-nav__toggle" type="button"> <!-- Когда меню открыто - класс main-nav__toggle--opened -->
-        <span class="visually-hidden">Открыть меню.</span>
-      </button>
+      <nav class="main-nav"> <!-- Класс main-nav--no-js для меню в потоке -->
+        <button class="main-nav__toggle" type="button"> <!-- Когда меню открыто - класс main-nav__toggle--opened -->
+          <span class="visually-hidden">Открыть меню.</span>
+        </button>
 
-      <ul class="main-nav__list site-list"> <!-- Когда меню открыто - класс main-nav__list--opened -->
-        <li class="site-list__item">
-          <a class="site-list__link site-list__link--current" href="#" aria-current="page">Главная</a>
-        </li>
+        <ul class="main-nav__list site-list"> <!-- Когда меню открыто - класс main-nav__list--opened -->
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--current" href="#" aria-current="page">Главная</a>
+          </li>
 
-        <li class="site-list__item">
-          <a class="site-list__link" href="catalog.html">Каталог продукции</a>
-        </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+          </li>
 
-        <li class="site-list__item">
-          <a class="site-list__link" href="form.html">Подбор программы</a>
-        </li>
-      </ul>
-    </nav>
+          <li class="site-list__item">
+            <a class="site-list__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="main">
@@ -59,21 +61,23 @@
     </section>
 
     <section class="programs container">
-      <h2 class="visually-hidden">Программы питания.</h2>
+      <div class="programs__wrapper">
+        <h2 class="visually-hidden">Программы питания.</h2>
 
-      <ul class="programs__list">
-        <li class="programs__item programs__item--slim">
-          <h3 class="programs__title">Похудение</h3>
-          <p class="programs__description regular-text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="programs__link" href="catalog.html">Каталог slim</a>
-        </li>
+        <ul class="programs__list">
+          <li class="programs__item programs__item--slim">
+            <h3 class="programs__title">Похудение</h3>
+            <p class="programs__description regular-text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="programs__link" href="catalog.html">Каталог slim</a>
+          </li>
 
-        <li class="programs__item programs__item--pro">
-          <h3 class="programs__title">Набор массы</h3>
-          <p class="programs__description regular-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="programs__link" href="catalog.html">Каталог pro</a>
-        </li>
-      </ul>
+          <li class="programs__item programs__item--pro">
+            <h3 class="programs__title">Набор массы</h3>
+            <p class="programs__description regular-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="programs__link" href="catalog.html">Каталог pro</a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="instruction container">
@@ -103,24 +107,26 @@
     <section class="case">
       <div class="container">
         <div class="case__wrapper">
-          <h2 class="case__title section-title">Живой пример</h2>
+          <div class="case__content">
+            <h2 class="case__title section-title">Живой пример</h2>
 
-          <p class="case__description regular-text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+            <p class="case__description regular-text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
-          <div class="case__inner">
-            <dl class="case__list">
-              <div class="case__item">
-                <dt class="case__text">снижение веса</dt>
-                <dd class="case__number">5 кг</dd>
-              </div>
+            <div class="case__inner">
+              <dl class="case__list">
+                <div class="case__item">
+                  <dt class="case__text">снижение веса</dt>
+                  <dd class="case__number">5 кг</dd>
+                </div>
 
-              <div class="case__item">
-                <dt class="case__text">затрачено времени</dt>
-                <dd class="case__number">60 дней</dd>
-              </div>
-            </dl>
+                <div class="case__item">
+                  <dt class="case__text">затрачено времени</dt>
+                  <dd class="case__number">60 дней</dd>
+                </div>
+              </dl>
 
-            <p class="case__price">Затраты на питание: <span class="case__price-amount">15&nbsp;000 руб.</span></p>
+              <p class="case__price">Затраты на питание: <span class="case__price-amount">15&nbsp;000 руб.</span></p>
+            </div>
           </div>
 
           <div class="case__slider">
@@ -128,7 +134,7 @@
               <ul class="compare-slider__list">
                 <li class="compare-slider__screen compare-slider__screen--before">
                   <picture>
-                    <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-before-desktop@1x.png 1x, images/cat-before-desktop@2x.png 2x">
+                    <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-before-desktop@1x.png 1x, images/cat-before-desktop@2x.png 2x" width="560" height="512">
                     <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x" width="560" height="512">
                     <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Толстый кот до похудения.">
                   </picture>
@@ -136,7 +142,7 @@
 
                 <li class="compare-slider__screen compare-slider__screen--after">
                   <picture>
-                    <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-after-desktop@1x.png 1x, images/cat-after-desktop@2x.png 2x">
+                    <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-after-desktop@1x.png 1x, images/cat-after-desktop@2x.png 2x" width="560" height="512">
                     <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x" width="560" height="512">
                     <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Нормальный кот после похудения.">
                   </picture>
@@ -154,59 +160,63 @@
   </main>
 
   <footer class="main-footer">
-    <div class="main-footer__contacts">
-      <p class="main-footer__text">Приглашаем <br>к сотрудничеству дилеров!</p>
-      <address class="main-footer__address address">
-        <p class="address-text regular-text">ул. Большая Конюшенная, д. 19/8</p>
-        <p class="address-text regular-text">Санкт-Петербург</p>
-      </address>
-    </div>
+    <div class="main-footer__inner">
+      <div class="main-footer__contacts">
+        <p class="main-footer__text">Приглашаем <br>к сотрудничеству дилеров!</p>
+        <address class="main-footer__address address">
+          <p class="address-text regular-text">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="address-text regular-text">Санкт-Петербург</p>
+        </address>
+      </div>
 
-    <div class="main-footer__map map" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
-      <a class="map__image" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
-        <picture>
-          <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x" width="1440" height="400">
-          <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x" width="768" height="400">
-          <img class="main-footer__image" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
-        </picture>
-      </a>
+      <div class="main-footer__map map" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
+        <a class="map__image" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
+          <picture>
+            <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x" width="1440" height="400">
+            <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x" width="768" height="400">
+            <img class="main-footer__image" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
+          </picture>
+        </a>
 
-      <div class="map__google">
-        <iframe class="map__google-link" title="Ссылка на Google карту с местоположением офиса." src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037876728603!2d30.320472477064794!3d59.93871647491512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1702570108647!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="map__google">
+          <iframe class="map__google-link" title="Ссылка на Google карту с местоположением офиса." src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037876728603!2d30.320472477064794!3d59.93871647491512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1702570108647!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
       </div>
     </div>
 
     <div class="main-footer__info container">
-      <a class="main-footer__logo logo-text" href="#" aria-current="page">
-        <img class="main-footer__logo-text" src="images/logo-text.svg" width="128" height="24" alt="Логотип Кэт Энерджи.">
-      </a>
-
-      <ul class="main-footer__list socials">
-        <li class="socials__item">
-          <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">ВКонтакте.</span>
-          </a>
-        </li>
-
-        <li class="socials__item">
-          <a class="socials__link socials__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">YouTube.</span>
-          </a>
-        </li>
-
-        <li class="socials__item">
-          <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Телеграм.</span>
-          </a>
-        </li>
-      </ul>
-
-      <div class="html-academy">
-        <span class="html-academy__text regular-text">HTML Academy</span>
-
-        <a class="html-academy__link" href="https://htmlacademy.ru/">
-          <span class="visually-hidden">Логотип HTML Academy.</span>
+      <div class="main-footer__info-wrapper">
+        <a class="main-footer__logo logo-text" href="#" aria-current="page">
+          <img class="main-footer__logo-text" src="images/logo-text.svg" width="128" height="24" alt="Логотип Кэт Энерджи.">
         </a>
+
+        <ul class="main-footer__list socials">
+          <li class="socials__item">
+            <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте.</span>
+            </a>
+          </li>
+
+          <li class="socials__item">
+            <a class="socials__link socials__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">YouTube.</span>
+            </a>
+          </li>
+
+          <li class="socials__item">
+            <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм.</span>
+            </a>
+          </li>
+        </ul>
+
+        <div class="html-academy">
+          <span class="html-academy__text regular-text">HTML Academy</span>
+
+          <a class="html-academy__link" href="https://htmlacademy.ru/">
+            <span class="visually-hidden">Логотип HTML Academy.</span>
+          </a>
+        </div>
       </div>
     </div>
   </footer>
