Добавляет формат webp

--- a/source/index.html
+++ b/source/index.html
@@ -134,6 +134,10 @@
               <ul class="compare-slider__list">
                 <li class="compare-slider__screen compare-slider__screen--before">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="images/cat-before-desktop@1x.webp 1x, images/cat-before-desktop@2x.webp 2x" width="560" height="512">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.webp 1x, images/cat-before-tablet@2x.webp 2x" width="560" height="512">
+                    <source type="image/webp" srcset="images/cat-before-mobile@1x.webp 1x, images/cat-before-mobile@2x.webp 2x" width="280" height="256">
+
                     <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-before-desktop@1x.png 1x, images/cat-before-desktop@2x.png 2x" width="560" height="512">
                     <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x" width="560" height="512">
                     <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Толстый кот до похудения.">
@@ -142,6 +146,10 @@
 
                 <li class="compare-slider__screen compare-slider__screen--after">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="images/cat-after-desktop@1x.webp 1x, images/cat-after-desktop@2x.webp 2x" width="560" height="512">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.webp 1x, images/cat-after-tablet@2x.webp 2x" width="560" height="512">
+                    <source type="image/webp" srcset="images/cat-after-mobile@1x.webp 1x, images/cat-after-mobile@2x.webp 2x" width="280" height="256">
+
                     <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-after-desktop@1x.png 1x, images/cat-after-desktop@2x.png 2x" width="560" height="512">
                     <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x" width="560" height="512">
                     <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Нормальный кот после похудения.">
@@ -172,6 +180,10 @@
       <div class="main-footer__map map">
         <a class="map__image" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
           <picture>
+            <source type="image/webp" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x" width="1440" height="400">
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/map-tablet@1x.webp 1x, images/map-tablet@2x.webp 2x" width="768" height="400">
+            <source type="image/webp" srcset="images/map-tablet@1x.webp 1x, images/map-tablet@2x.webp 2x" width="320" height="362">
+
             <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x" width="1440" height="400">
             <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x" width="768" height="400">
             <img class="main-footer__image" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
