--- a/source/index.html
+++ b/source/index.html
@@ -225,9 +225,8 @@
         </ul>
 
         <div class="html-academy">
-          <span class="html-academy__text regular-text">HTML Academy</span>
-
-          <a class="html-academy__link" href="https://htmlacademy.ru/">
+          <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="html-academy__text regular-text">HTML Academy</span>
             <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
